@@ -1,4 +1,17 @@
-# SimpleConverter
-This JavaFX application convert binary, decimal, hexadecimal digits into each other
+# Simple Converter GUI in JavaFX
+*A MacOS bundle application is included in this repository, feel free to download the dmg file*.  
+*The application may not run on Apple M seriers chip*.   
+*Java installation is also requied*. 
 
+## JavaFX required:
+https://gluonhq.com/products/javafx/
+
+## VM Arguments:
+`--module-path "/PATH/TO/javafx-sdk-version/lib" --add-modules javafx.controls,javafx.fxml`
+
+## Program arguments (For Mac users) (not always neccessary): 
+`-XstartOnFirstThread`
+
+## To run exported .jar file in terminal:
+`java --module-path "/PATH/TO/javafx-sdk-version/lib" --add-modules javafx.controls,javafx.fxml -jar path/to/jar`
 
